fix: fonts on mobile displayed weirdly, loading fonts from google CDN

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'Inter';
+  font-style: oblique 8deg;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/inter/v13/UcCo3FwrK3iLTcviYwY.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 // TODO: fix bug with scroll-snap-align on ios and page-selector
 :root {
   font-family: Inter, system-ui;
@@ -77,15 +86,15 @@ body {
 }
 
 @keyframes InfiniteBackground {
-    0% {
-      left: 0%;
-    }
-    50% {
-      left: -20%;
-    }
-    100% {
-      left: 0%;
-    }
+  0% {
+    left: 0%;
+  }
+  50% {
+    left: -20%;
+  }
+  100% {
+    left: 0%;
+  }
 }
 
 main {
@@ -153,6 +162,8 @@ a {
   color: transparent;
   font-variation-settings: "slnt" -8;
   animation: 7s GradientText 2s ease-in-out infinite;
+
+  -webkit-text-size-adjust: 100%;
 }
 
 .emoji {
